Details
-
Bug
-
Status: Closed
-
Blocker
-
Resolution: Fixed
-
1.15.0
Description
This was the fix for GEODE-8955 (PR #6045). Here's a description from the start of the Slack discussion thread:
"PR 6045 made on geode-wan LocatorHelper class seems to have broken WAN replication between two clusters on localhost. I get the ridiculous nature of WAN over localhost. Is it intentional that localhost is replaced with a local interface IP by the changes made in the PR? The result is a test in the geode-native pipeline does not work anymore since one site can’t see the other since the locators are bound to localhost but trying to connection to each other on a non-localhost IP address. Did we run into this same issue on any of our Java based tests?"
Need to determine if this is desired behavior or not. If not, the old behavior should be restored. If so, geode native team needs a JIRA ticket to fix their Wan integration test(s) in CI, where this issue was detected.
Attachments
Issue Links
- relates to
-
GEODE-9637 Disable Wan serialization test pending fix from Geode
- Closed
- links to