GEODE-9634: Workaround for failing test. (#872)

* Updates test.
* Fixes hostname issues with tests.
* Fix default locator address init.